r/moul/x/daily/guestbook/v2/README.md
# Guestbook

> ⚠️ **Experimental — generated with no human supervision.** This realm was
> produced automatically by an MCP-driven agent to exercise the gno MCP server
> and tooling, and to generate test content for gno compilers, linters and
> formatters. **Not audited. Not for production.** Full context & folder README:
> [r/moul/x/daily](https://github.com/moul/gno-contracts/blob/main/r/moul/x/daily/README.md)

---


A public, on-chain guestbook realm for gno.land. Anyone can leave a signed
message; every entry records the signer's address, the message, and the block
height at which it was signed. The realm's `Render` page shows all entries as a
Markdown table, newest-first, with a running total.

Built for the **sapphire** testnet (gno 0.9).

## Realm path

```
gno.land/r/REPLACE_ADDR/guestbook
```

(`REPLACE_ADDR` is substituted with the deployer's address at publish time.)

## Public API

- `Sign(cur realm, message string)` — crossing tx. Appends an entry attributed
  to the immediate caller. Panics on an empty or over-long (>280 bytes) message.
- `Count() int` — total number of signatures (read-only).
- `Render(path string) string` — Markdown table of all entries, newest-first.

## Example calls

Sign the guestbook (from an EOA via `gnokey`):

```sh
gnokey maketx call \
  -pkgpath "gno.land/r/REPLACE_ADDR/guestbook" \
  -func Sign \
  -args "gm gno.land!" \
  -gas-fee 1000000ugnot -gas-wanted 2000000 \
  -broadcast -chainid sapphire-1 -remote <rpc> mykey
```

From another realm, invoke it as a crossing call:

```go
guestbook.Sign(cross(cur), "hello from my realm")
```

View the rendered guestbook:

```sh
gnokey query vm/qrender --data "gno.land/r/REPLACE_ADDR/guestbook:"
```

## Example render output

```markdown
# Guestbook

**Total signatures:** 2

| # | Who | Message | Height |
|---|-----|---------|--------|
| 2 | g1v9jxgu…0gh | hello from my realm | 4210 |
| 1 | g1jg8mtu…qf5 | gm gno.land! | 4180 |
```

## Notes

- Caller identity uses the gno 0.9 interrealm convention: `Sign` is a crossing
  function that checks `cur.IsCurrent()` before deriving the author from
  `cur.Previous().Address()`.
- Block height comes from `chain/runtime.ChainHeight()` — deterministic.
- Entries are stored in a `gno.land/p/nt/avl/v0` tree keyed by a zero-padded
  sequence number so iteration order is deterministic and matches insertion
  order (reversed for newest-first rendering).
```

## What changed in v1

Identical behaviour to [`v0`](../v0) apart from rendering, which now goes
through [`p/moul/kit/ui`](../../../../../../p/moul/kit/ui/v0) instead of the local `shortAddr`, `escapeCell` helpers.

**One address format.** Eleven realms carried their own `shortAddr` with four different truncation rules, so the same account rendered differently depending on which realm you opened. `ui.Addr` is that decision made once: 8 leading characters, an ellipsis, 4 trailing, in backticks.

**Real escaping.** The local helper replaced a handful of markdown metacharacters. `ui.Inline` and `ui.Cell` delegate to [`p/nt/markdown/sanitize`](/p/nt/markdown/sanitize/v0), which also strips bidi and zero-width characters and folds newlines, so user text cannot reorder or escape the line it sits on.

Visible change: addresses now render in monospace.

The rendering change means the output differs from v0, which under this repo's versioning rule is a compatibility change, hence a new version rather than an edit in place. `v0` stays live and untouched.

## What changed in v2

State moved from a hand-rolled `avl.Tree` + `nextID` + zero-padding helper to
[`p/moul/kit/store`](/p/moul/kit/store/v0), which keys entries by
[`seqid`](/p/nt/seqid/v0) instead of a fixed-width decimal string.

`v1` padded ids to width 16, the widest of the six hand-rolled variants in this
repo and still a ceiling. Past that width the padding stops and the tree
orders `"1000000000000"` before `"999999999999"`, so every list this realm
renders would be wrong from that entry on. `store` keys are 8 big-endian bytes
whose order is numeric for every `uint64`, so there is no width left to outgrow.

`Entry` loses its `ID` field, which the store now owns, so `addEntry` returns
`(store.ID, *Entry)`. The `count` global is gone too: `Len()` answers it.

Ids stay plain integers and the rendered output is unchanged. This is a storage
change, which under this repo's versioning rule is a compatibility change, hence
a new version rather than an edit in place. [`v1`](../v1) and [`v0`](../v0)
stay live and untouched.

<!-- BEGIN GNOCONTRACTS FOOTER (generated by `make readmes`; do not edit below) -->

---

Part of **[moul/gno-contracts](https://github.com/moul/gno-contracts)** — moul's versioned gno.land contracts. See the repository for the full catalog, build/test tooling, and usage.

**Dependency graph:**

![gno.land/r/moul/x/daily/guestbook/v1 dependency graph](https://raw.githubusercontent.com/moul/gno-contracts/main/_assets/gno.land/r/moul/x/daily/guestbook/v1/deps.png)

> 🧪 **Highly experimental — potentially vibe-coded.** Not audited; may break, change, or be removed at any time. Do not use with anything of value. Full disclaimer: [DISCLAIMER](https://github.com/moul/gno-contracts/blob/main/DISCLAIMER.md).

<!-- END GNOCONTRACTS FOOTER -->
